DK - footer alignment, legal page now has correct links & spacing

--- a/css/marketing-website-v1.css
+++ b/css/marketing-website-v1.css
@@ -672,7 +672,7 @@
 
 .footer-l-column {
   padding-right: 0px;
-  padding-left: 30px;
+  padding-left: 0px;
   text-align: left;
 }
 
@@ -818,8 +818,10 @@
 }
 
 .columns-2 {
-  padding-right: 30px;
-  padding-left: 30px;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
 .text-block-21 {
@@ -1025,7 +1027,7 @@
     padding-left: 20px;
   }
   .footer-l-column {
-    padding-left: 20px;
+    padding-left: 0px;
   }
   .div-block-22 {
     padding-bottom: 30px;
@@ -1053,6 +1055,10 @@
   }
   .icon-2 {
     display: none;
+  }
+  .columns-2 {
+    padding-right: 30px;
+    padding-left: 30px;
   }
   .text-block-21 {
     font-size: 24px;
@@ -1155,7 +1161,7 @@
     width: 350px;
   }
   .footer-l-column {
-    padding-left: 10px;
+    padding-left: 0px;
   }
   .footer-icon {
     padding-left: 20px;
